xamarin/ServoSharp.AutoGen/ServoSharp.cs

// ----------------------------------------------------------------------------
// <auto-generated>
// This is autogenerated code by CppSharp.
// Do not edit this file or all your changes will be lost after re-generation.
// </auto-generated>
// ----------------------------------------------------------------------------
using System;
using System.Runtime.InteropServices;
using System.Security;

namespace ServoSharp
{
    /// <summary>Generic result errors</summary>
    public enum ServoResult
    {
        Ok = 0,
        UnexpectedError = 1,
        WrongThread = 2,
        CantReadStr = 3,
        CantParseUrl = 4,
        NotImplemented = 5
    }

    /// <summary>Scroll state</summary>
    public enum ScrollState
    {
        Start = 0,
        Move = 1,
        End = 2,
        Canceled = 3
    }

    /// <summary>Touch state</summary>
    public enum TouchState
    {
        Down = 0,
        Up = 1
    }

    /// <summary>Callback used by Servo internals</summary>
    public unsafe partial struct HostCallbacks
    {
        public partial struct __Internal
        {
            internal global::System.IntPtr wakeup;

            internal global::System.IntPtr flush;

            internal global::System.IntPtr log;

            internal global::System.IntPtr on_load_started;

            internal global::System.IntPtr on_load_ended;

            internal global::System.IntPtr on_title_changed;

            internal global::System.IntPtr on_url_changed;

            internal global::System.IntPtr on_history_changed;

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libservobridge", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="??0HostCallbacks@@QEAA@AEBU0@@Z")]
            internal static extern global::System.IntPtr cctor(global::System.IntPtr instance, global::System.IntPtr _0);
        }

        private HostCallbacks.__Internal __instance;
        internal HostCallbacks.__Internal __Instance { get { return __instance; } }

        internal static global::ServoSharp.HostCallbacks __CreateInstance(global::System.IntPtr native, bool skipVTables = false)
        {
            return new global::ServoSharp.HostCallbacks(native.ToPointer(), skipVTables);
        }

        internal static global::ServoSharp.HostCallbacks __CreateInstance(global::ServoSharp.HostCallbacks.__Internal native, bool skipVTables = false)
        {
            return new global::ServoSharp.HostCallbacks(native, skipVTables);
        }

        private HostCallbacks(global::ServoSharp.HostCallbacks.__Internal native, bool skipVTables = false)
            : this()
        {
            __instance = native;
        }

        private HostCallbacks(void* native, bool skipVTables = false) : this()
        {
            __instance = *(global::ServoSharp.HostCallbacks.__Internal*) native;
        }

        public HostCallbacks(global::ServoSharp.HostCallbacks _0)
            : this()
        {
            var ____arg0 = _0.__Instance;
            var __arg0 = new global::System.IntPtr(&____arg0);
            fixed (__Internal* __instancePtr = &__instance)
            {
                __Internal.cctor(new global::System.IntPtr(__instancePtr), __arg0);
            }
        }
    }

    public unsafe partial struct Size
    {
        public partial struct __Internal
        {
            internal uint width;

            internal uint height;

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libservobridge", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="??0Size@@QEAA@AEBU0@@Z")]
            internal static extern global::System.IntPtr cctor(global::System.IntPtr instance, global::System.IntPtr _0);
        }

        private Size.__Internal __instance;
        internal Size.__Internal __Instance { get { return __instance; } }

        internal static global::ServoSharp.Size __CreateInstance(global::System.IntPtr native, bool skipVTables = false)
        {
            return new global::ServoSharp.Size(native.ToPointer(), skipVTables);
        }

        internal static global::ServoSharp.Size __CreateInstance(global::ServoSharp.Size.__Internal native, bool skipVTables = false)
        {
            return new global::ServoSharp.Size(native, skipVTables);
        }

        private Size(global::ServoSharp.Size.__Internal native, bool skipVTables = false)
            : this()
        {
            __instance = native;
        }

        private Size(void* native, bool skipVTables = false) : this()
        {
            __instance = *(global::ServoSharp.Size.__Internal*) native;
        }

        public Size(global::ServoSharp.Size _0)
            : this()
        {
            var ____arg0 = _0.__Instance;
            var __arg0 = new global::System.IntPtr(&____arg0);
            fixed (__Internal* __instancePtr = &__instance)
            {
                __Internal.cctor(new global::System.IntPtr(__instancePtr), __arg0);
            }
        }

        public uint Width
        {
            get
            {
                return __instance.width;
            }

            set
            {
                __instance.width = value;
            }
        }

        public uint Height
        {
            get
            {
                return __instance.height;
            }

            set
            {
                __instance.height = value;
            }
        }
    }

    public unsafe partial struct Margins
    {
        public partial struct __Internal
        {
            internal uint top;

            internal uint right;

            internal uint bottom;

            internal uint left;

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libservobridge", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="??0Margins@@QEAA@AEBU0@@Z")]
            internal static extern global::System.IntPtr cctor(global::System.IntPtr instance, global::System.IntPtr _0);
        }

        private Margins.__Internal __instance;
        internal Margins.__Internal __Instance { get { return __instance; } }

        internal static global::ServoSharp.Margins __CreateInstance(global::System.IntPtr native, bool skipVTables = false)
        {
            return new global::ServoSharp.Margins(native.ToPointer(), skipVTables);
        }

        internal static global::ServoSharp.Margins __CreateInstance(global::ServoSharp.Margins.__Internal native, bool skipVTables = false)
        {
            return new global::ServoSharp.Margins(native, skipVTables);
        }

        private Margins(global::ServoSharp.Margins.__Internal native, bool skipVTables = false)
            : this()
        {
            __instance = native;
        }

        private Margins(void* native, bool skipVTables = false) : this()
        {
            __instance = *(global::ServoSharp.Margins.__Internal*) native;
        }

        public Margins(global::ServoSharp.Margins _0)
            : this()
        {
            var ____arg0 = _0.__Instance;
            var __arg0 = new global::System.IntPtr(&____arg0);
            fixed (__Internal* __instancePtr = &__instance)
            {
                __Internal.cctor(new global::System.IntPtr(__instancePtr), __arg0);
            }
        }

        public uint Top
        {
            get
            {
                return __instance.top;
            }

            set
            {
                __instance.top = value;
            }
        }

        public uint Right
        {
            get
            {
                return __instance.right;
            }

            set
            {
                __instance.right = value;
            }
        }

        public uint Bottom
        {
            get
            {
                return __instance.bottom;
            }

            set
            {
                __instance.bottom = value;
            }
        }

        public uint Left
        {
            get
            {
                return __instance.left;
            }

            set
            {
                __instance.left = value;
            }
        }
    }

    public unsafe partial struct Position
    {
        public partial struct __Internal
        {
            internal int x;

            internal int y;

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libservobridge", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="??0Position@@QEAA@AEBU0@@Z")]
            internal static extern global::System.IntPtr cctor(global::System.IntPtr instance, global::System.IntPtr _0);
        }

        private Position.__Internal __instance;
        internal Position.__Internal __Instance { get { return __instance; } }

        internal static global::ServoSharp.Position __CreateInstance(global::System.IntPtr native, bool skipVTables = false)
        {
            return new global::ServoSharp.Position(native.ToPointer(), skipVTables);
        }

        internal static global::ServoSharp.Position __CreateInstance(global::ServoSharp.Position.__Internal native, bool skipVTables = false)
        {
            return new global::ServoSharp.Position(native, skipVTables);
        }

        private Position(global::ServoSharp.Position.__Internal native, bool skipVTables = false)
            : this()
        {
            __instance = native;
        }

        private Position(void* native, bool skipVTables = false) : this()
        {
            __instance = *(global::ServoSharp.Position.__Internal*) native;
        }

        public Position(global::ServoSharp.Position _0)
            : this()
        {
            var ____arg0 = _0.__Instance;
            var __arg0 = new global::System.IntPtr(&____arg0);
            fixed (__Internal* __instancePtr = &__instance)
            {
                __Internal.cctor(new global::System.IntPtr(__instancePtr), __arg0);
            }
        }

        public int X
        {
            get
            {
                return __instance.x;
            }

            set
            {
                __instance.x = value;
            }
        }

        public int Y
        {
            get
            {
                return __instance.y;
            }

            set
            {
                __instance.y = value;
            }
        }
    }

    public unsafe partial struct ViewLayout
    {
        public partial struct __Internal
        {
            internal global::ServoSharp.Size.__Internal view_size;

            internal global::ServoSharp.Margins.__Internal margins;

            internal global::ServoSharp.Position.__Internal position;

            internal float hidpi_factor;

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libservobridge", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="??0ViewLayout@@QEAA@AEBU0@@Z")]
            internal static extern global::System.IntPtr cctor(global::System.IntPtr instance, global::System.IntPtr _0);
        }

        private ViewLayout.__Internal __instance;
        internal ViewLayout.__Internal __Instance { get { return __instance; } }

        internal static global::ServoSharp.ViewLayout __CreateInstance(global::System.IntPtr native, bool skipVTables = false)
        {
            return new global::ServoSharp.ViewLayout(native.ToPointer(), skipVTables);
        }

        internal static global::ServoSharp.ViewLayout __CreateInstance(global::ServoSharp.ViewLayout.__Internal native, bool skipVTables = false)
        {
            return new global::ServoSharp.ViewLayout(native, skipVTables);
        }

        private ViewLayout(global::ServoSharp.ViewLayout.__Internal native, bool skipVTables = false)
            : this()
        {
            __instance = native;
        }

        private ViewLayout(void* native, bool skipVTables = false) : this()
        {
            __instance = *(global::ServoSharp.ViewLayout.__Internal*) native;
        }

        public ViewLayout(global::ServoSharp.ViewLayout _0)
            : this()
        {
            var ____arg0 = _0.__Instance;
            var __arg0 = new global::System.IntPtr(&____arg0);
            fixed (__Internal* __instancePtr = &__instance)
            {
                __Internal.cctor(new global::System.IntPtr(__instancePtr), __arg0);
            }
        }

        /// <summary>Size of the view. Hardware pixels.</summary>
        public global::ServoSharp.Size __view_size;

        /// <summary>
        /// <para>Margins of the view. Hardware pixels.</para>
        /// <para>Pages are painted all over the surface,</para>
        /// <para>but if margins are not zero, the layout</para>
        /// <para>coordinates are bounds by these margins.</para>
        /// </summary>
        public global::ServoSharp.Margins __margins;

        /// <summary>Position of the window.</summary>
        public global::ServoSharp.Position __position;

        public float HidpiFactor
        {
            get
            {
                return __instance.hidpi_factor;
            }

            set
            {
                __instance.hidpi_factor = value;
            }
        }
    }

    public unsafe partial class ServoSharp : IDisposable
    {
        public partial struct __Internal
        {
            [SuppressUnmanagedCodeSecurity]
            [DllImport("libservobridge", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="init_with_egl")]
            internal static extern global::ServoSharp.ServoResult InitWithEgl(global::System.IntPtr instance, byte* url, byte* resources_path, global::ServoSharp.HostCallbacks.__Internal callbacks, global::ServoSharp.ViewLayout.__Internal layout);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libservobridge", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="perform_updates")]
            internal static extern global::ServoSharp.ServoResult PerformUpdates(global::System.IntPtr instance);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libservobridge", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="load_url")]
            internal static extern global::ServoSharp.ServoResult LoadUrl(global::System.IntPtr instance, byte* url);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libservobridge", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="scroll")]
            internal static extern global::ServoSharp.ServoResult Scroll(global::System.IntPtr instance, int dx, int dy, uint x, uint y, global::ServoSharp.ScrollState state);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libservobridge", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="servo_version")]
            internal static extern byte* ServoVersion(global::System.IntPtr instance);
        }

        public global::System.IntPtr __Instance { get; protected set; }

        protected int __PointerAdjustment;
        internal static readonly global::System.Collections.Concurrent.ConcurrentDictionary<IntPtr, global::ServoSharp.ServoSharp> NativeToManagedMap = new global::System.Collections.Concurrent.ConcurrentDictionary<IntPtr, global::ServoSharp.ServoSharp>();
        protected void*[] __OriginalVTables;

        protected bool __ownsNativeInstance;

        internal static global::ServoSharp.ServoSharp __CreateInstance(global::System.IntPtr native, bool skipVTables = false)
        {
            return new global::ServoSharp.ServoSharp(native.ToPointer(), skipVTables);
        }

        internal static global::ServoSharp.ServoSharp __CreateInstance(global::ServoSharp.ServoSharp.__Internal native, bool skipVTables = false)
        {
            return new global::ServoSharp.ServoSharp(native, skipVTables);
        }

        private static void* __CopyValue(global::ServoSharp.ServoSharp.__Internal native)
        {
            var ret = Marshal.AllocHGlobal(sizeof(global::ServoSharp.ServoSharp.__Internal));
            *(global::ServoSharp.ServoSharp.__Internal*) ret = native;
            return ret.ToPointer();
        }

        private ServoSharp(global::ServoSharp.ServoSharp.__Internal native, bool skipVTables = false)
            : this(__CopyValue(native), skipVTables)
        {
            __ownsNativeInstance = true;
            NativeToManagedMap[__Instance] = this;
        }

        protected ServoSharp(void* native, bool skipVTables = false)
        {
            if (native == null)
                return;
            __Instance = new global::System.IntPtr(native);
        }

        public ServoSharp()
        {
            __Instance = Marshal.AllocHGlobal(sizeof(global::ServoSharp.ServoSharp.__Internal));
            __ownsNativeInstance = true;
            NativeToManagedMap[__Instance] = this;
        }

        public void Dispose()
        {
            Dispose(disposing: true);
        }

        public virtual void Dispose(bool disposing)
        {
            if (__Instance == IntPtr.Zero)
                return;
            global::ServoSharp.ServoSharp __dummy;
            NativeToManagedMap.TryRemove(__Instance, out __dummy);
            if (__ownsNativeInstance)
                Marshal.FreeHGlobal(__Instance);
            __Instance = IntPtr.Zero;
        }

        /// <summary>Needs to be called from the EGL thread</summary>
        public global::ServoSharp.ServoResult InitWithEgl(byte* url, byte* resources_path, global::ServoSharp.HostCallbacks callbacks, global::ServoSharp.ViewLayout layout)
        {
            var __arg2 = callbacks.__Instance;
            var __arg3 = layout.__Instance;
            var __ret = __Internal.InitWithEgl((__Instance + __PointerAdjustment), url, resources_path, __arg2, __arg3);
            return __ret;
        }

        /// <summary>
        /// <para>This is the Servo heartbeat. This needs to be called</para>
        /// <para>everytime wakeup is called.</para>
        /// </summary>
        public global::ServoSharp.ServoResult PerformUpdates()
        {
            var __ret = __Internal.PerformUpdates((__Instance + __PointerAdjustment));
            return __ret;
        }

        /// <summary>Load an URL. This needs to be a valid url.</summary>
        public global::ServoSharp.ServoResult LoadUrl(byte* url)
        {
            var __ret = __Internal.LoadUrl((__Instance + __PointerAdjustment), url);
            return __ret;
        }

        public global::ServoSharp.ServoResult Scroll(int dx, int dy, uint x, uint y, global::ServoSharp.ScrollState state)
        {
            var __ret = __Internal.Scroll((__Instance + __PointerAdjustment), dx, dy, x, y, state);
            return __ret;
        }

        public byte* ServoVersion()
        {
            var __ret = __Internal.ServoVersion((__Instance + __PointerAdjustment));
            return __ret;
        }
    }

    public unsafe partial class libservobridge
    {
        public partial struct __Internal
        {
            [SuppressUnmanagedCodeSecurity]
            [DllImport("libservobridge", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="touch")]
            internal static extern global::ServoSharp.ServoResult Touch(uint _x, uint _y, global::ServoSharp.TouchState _state);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libservobridge", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="reload")]
            internal static extern global::ServoSharp.ServoResult Reload();

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libservobridge", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="resize")]
            internal static extern global::ServoSharp.ServoResult Resize(global::ServoSharp.ViewLayout.__Internal layout);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libservobridge", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="stop")]
            internal static extern global::ServoSharp.ServoResult Stop();

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libservobridge", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="go_back")]
            internal static extern global::ServoSharp.ServoResult GoBack();

            [SuppressUnmanagedCodeSecurity]
            [DllImport("libservobridge", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="go_forward")]
            internal static extern global::ServoSharp.ServoResult GoForward();
        }

        public static global::ServoSharp.ServoResult Touch(uint _x, uint _y, global::ServoSharp.TouchState _state)
        {
            var __ret = __Internal.Touch(_x, _y, _state);
            return __ret;
        }

        /// <summary>Reload page.</summary>
        public static global::ServoSharp.ServoResult Reload()
        {
            var __ret = __Internal.Reload();
            return __ret;
        }

        /// <summary>Reload page.</summary>
        public static global::ServoSharp.ServoResult Resize(global::ServoSharp.ViewLayout layout)
        {
            var __arg0 = layout.__Instance;
            var __ret = __Internal.Resize(__arg0);
            return __ret;
        }

        /// <summary>Stop page loading.</summary>
        public static global::ServoSharp.ServoResult Stop()
        {
            var __ret = __Internal.Stop();
            return __ret;
        }

        public static global::ServoSharp.ServoResult GoBack()
        {
            var __ret = __Internal.GoBack();
            return __ret;
        }

        public static global::ServoSharp.ServoResult GoForward()
        {
            var __ret = __Internal.GoForward();
            return __ret;
        }
    }
}
